--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!-- Home Section -->
     <section id="home">
         <div class="title-group">
-            <h1>Custom Title Here</h1>
-            <h2>Welcome to the Website!</h2>
+            <h1>Welcome to Website</h1>
+            <h2 hidden>Welcome to the Website!</h2>
         </div>
     </section>
 
